[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "anyrun-tools"
version = "0.1.0"
description = "Python SDK for ANY.RUN APIs"
readme = "README.md"
requires-python = ">=3.8,<3.13"
license = "MIT"
keywords = ["anyrun", "sandbox", "threat-intelligence", "malware-analysis"]
authors = [
    { name = "Kirill Bykov", email = "bykovk@anyrun.tools" }
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
dependencies = [
    "httpx>=0.24.0,<1.0.0",
    "pydantic>=2.0.0,<3.0.0",
    "typing-extensions>=4.5.0,<5.0.0",
    "loguru>=0.7.0,<1.0.0",
    "tenacity>=8.2.0,<9.0.0",
    "redis>=5.0.0,<6.0.0",
    "tomli>=2.0.0,<3.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=7.0.0,<8.0.0",
    "pytest-asyncio>=0.23.0,<1.0.0",
    "pytest-cov>=4.1.0,<5.0.0",
    "pytest-mock>=3.10.0,<4.0.0",
    "respx>=0.20.0,<1.0.0",
    "coverage[toml]>=7.2.0,<8.0.0",
    "tox>=4.11.0,<5.0.0",
    "tox-gh-actions>=3.1.0,<4.0.0",
    "black>=23.0.0,<24.0.0",
    "isort>=5.12.0,<6.0.0",
    "flake8>=6.0.0,<7.0.0",
    "flake8-docstrings>=1.7.0,<2.0.0",
    "flake8-quotes>=3.3.0,<4.0.0",
    "flake8-bugbear>=23.0.0,<24.0.0",
    "mypy>=1.4.0,<2.0.0",
    "bandit>=1.7.0,<2.0.0",
    "types-redis>=4.6.0.5,<5.0.0",
    "types-setuptools>=68.0.0,<69.0.0",
    "autoflake>=2.3.0,<3.0.0",
]

[project.urls]
Homepage = "https://github.com/bykovk-pro/anyrun-tools"
Documentation = "https://bykovk-pro.github.io/anyrun-tools"
Repository = "https://github.com/bykovk-pro/anyrun-tools.git"
Changelog = "https://github.com/bykovk-pro/anyrun-tools/blob/main/CHANGELOG.md"
Issues = "https://github.com/bykovk-pro/anyrun-tools/issues"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.hatch.build.targets.wheel]
packages = ["src/anyrun"]

[tool.hatch.build]
include = [
    "src/anyrun/**/*.py",
    "src/anyrun/py.typed",
]
exclude = [
    "tests/**",
    "examples/**",
    "docs/**",
    "*.pyc",
    "**/__pycache__",
    "**/.pytest_cache",
    "**/.mypy_cache",
]
